k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 

metadata:
  name: backend-deployment 
  namespace: chat-app

spec:
  replicas : 1
  selector:
    matchLabels:
      app: backend 

  template:
    metadata:
      name: backend-pod 
      namespace: chat-app

      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-bakcend
        image: alfaizrangrez/chat-app-bakcend:latest 
        ports:
        - containerPort: 5001
